# dexterws-chess-gui

./: Cargo.toml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: chb7s8zya1is849zzd7frliw6wlny2ai-source  p2hby44a0qzrnd1vxcpcgfav6160rmcv-source
src/: main.rs
