[package]
name = "dexterws-chess-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chess = { git = "https://github.com/INDA24PlusPlus/liamt-chess", version = "0.1.0" }
chess-networking = { git = "https://github.com/INDA24PlusPlus/chess-networking", version = "0.1.0" }
ggez = "0.9.3"
rmp-serde = "1.3.0"
